KAS-4241 Replace auk-form & auk-form-group instances (part 2)

--- a/app/components/mandatees/mandatee-person-selector.hbs
+++ b/app/components/mandatees/mandatee-person-selector.hbs
@@ -1,4 +1,4 @@
-<div class="auk-form-group">
+<AuFormRow>
   {{#if @showLabel}}
     <Auk::Label>
       {{t "ministers"}}
@@ -35,4 +35,4 @@
       </PowerSelect>
     {{/if}}
   {{/if}}
-</div>
+</AuFormRow>
